# TransGrokking

./: .gitignore  AGENTS.md  PLATFORM_POLICY.md  README.md  data.py  env.yml  environment.yml  main.py  pyproject.toml  scal.py
analysis/: AGENTS.md
configs/: baseline_ce.yaml  smoke.yaml
docs/: AGENTS.md  experiment_protocol.md  implementation.md  intro.md
legacy/: README.md  data.py  main.py
results/m1_ce_reference/: README.md  accuracy_curve.csv  config.resolved.yaml  events.json  loss_curve.csv  margin_curve.csv  parameter_norm_curve.csv  provenance.json  scalars.jsonl
src/: AGENTS.md
src/transgrokking/: __init__.py  cli.py  config.py  data.py
src/transgrokking/metrics/: __init__.py  audit.py  behavior.py  evaluator.py  events.py  norms.py
src/transgrokking/models/: __init__.py  transformer.py
src/transgrokking/training/: __init__.py  artifacts.py  checkpoint.py  optimizer.py  trainer.py
src/transgrokking/utils/: __init__.py  atomic.py  doctor.py  reproducibility.py
tests/: AGENTS.md
tests/integration/: test_cli_and_cuda.py  test_resume.py  test_resume_branch.py
tests/unit/: test_behavior_metrics.py  test_checkpoint_rng_atomic.py  test_config_model_optimizer.py  test_core.py  test_metric_artifacts.py  test_norms_events.py
